--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,9 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: postgres
-  password: damola007
+  password: Damola007
+  
+
 
 development:
   <<: *default
